--- a/Bloque02/css/styles.css
+++ b/Bloque02/css/styles.css
@@ -55,6 +55,7 @@ header {
 .container__main {
   background-color: var(--blanco);
   .container__seccion {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -75,6 +76,38 @@ header {
   }
 }
 
+/*? Footer*/
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  background-color: var(--negro);
+  .p-footer {
+    color: var(--blanco);
+    .a-footer {
+      color: var(--salmon);
+      transition: all ease-in-out 200ms;
+      &:hover {
+        color: var(--rosa);
+      }
+    }
+  }
+
+  .social__icons {
+    .a-footer-icon {
+      color: var(--blanco);
+      margin-right: 5px;
+      transition: all ease-in-out 200ms;
+      &:hover {
+        color: var(--salmon);
+      }
+    }
+  }
+}
+
+/*? Acerca */
+
 /* Extra small devices (phones, less than 576px) */
 @media (max-width: 575.98px) {
   /* body {
@@ -92,7 +125,15 @@ header {
         margin-top: 1rem;
         margin-bottom: 1rem;
         width: 100%;
+        text-align: center;
       }
+    }
+  }
+
+  footer {
+    flex-direction: column;
+    .social__icons {
+      margin-top: 1rem;
     }
   }
 }
