--- a/Bloque02/css/styles.css
+++ b/Bloque02/css/styles.css
@@ -107,6 +107,27 @@ footer {
 }
 
 /*? Acerca */
+.container__acerca {
+  min-height: 100vh;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .container-img {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container__content {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
 
 /* Extra small devices (phones, less than 576px) */
 @media (max-width: 575.98px) {
@@ -134,6 +155,18 @@ footer {
     flex-direction: column;
     .social__icons {
       margin-top: 1rem;
+    }
+  }
+
+  .container__acerca {
+    flex-direction: column;
+    .container-img {
+      width: 100%;
+    }
+    .container__content {
+      margin-top: 1rem;
+      width: 100%;
+      text-align: center;
     }
   }
 }
